# vscode-deltalake-viewer

./: .gitignore  Cargo.toml  LICENSE  README.md  generate_test_table.py
.github/workflows/: ci.yml  release.yml
crates/delta-core/: Cargo.toml
crates/delta-core/src/: convert.rs  delta.rs  error.rs  lib.rs  parquet.rs  schema.rs
crates/delta-vscode/: Cargo.toml
crates/delta-vscode/src/: main.rs  protocol.rs
crates/delta-vscode/tests/: protocol_test.rs
extension/: .vscodeignore  README.md  esbuild.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: commands.ts  deltaDetector.ts  extension.ts  protocol.ts  sidecar.ts
extension/src/__tests__/: protocol.test.ts  sidecar.test.ts
extension/src/shared/: types.ts
extension/src/webview/: getHtml.ts  webviewPanel.ts
extension/webview-ui/: index.html  main.ts  style.css  tsconfig.json
scripts/: package-extension.sh
