[workspace]
resolver = "2"
members = [
    "crates/delta-core",
    "crates/delta-vscode",
]

[workspace.dependencies]
arrow = { version = "54", default-features = false, features = ["json"] }
parquet = { version = "54", default-features = false, features = ["arrow"] }
deltalake = { version = "0.25", default-features = false, features = ["datafusion"] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false, features = ["macros", "io-util", "io-std", "rt", "sync"] }
thiserror = "2"

[profile.release]
opt-level = "z"        # optimize for size ("s" is slightly faster, "z" is smallest)
lto = true             # link-time optimization
codegen-units = 1      # better optimization, smaller binary
strip = true           # strip symbols
panic = "abort"        # removes unwinding machinery
debug = 0