[package]
name = "delta-core"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = { workspace = true }
parquet = { workspace = true }
deltalake = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
