[package]
name = "delta-vscode"
version = "0.1.0"
edition = "2021"

[dependencies]
delta-core = { path = "../delta-core" }
deltalake = { workspace = true }
lru = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
assert_cmd = "2"
