[package]
name = "delta-vscode"
version = "0.1.0"
edition = "2021"

[dependencies]
delta-core = { path = "../delta-core" }
deltalake = { workspace = true }
lru = "0.14"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
arrow = { workspace = true }
deltalake = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
